--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,39 +7,51 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
 
+    <!-- This FrameLayout insets its children based on system windows using
+         android:fitsSystemWindows. -->
+
     <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
         android:layout_height="wrap_content" android:keepScreenOn="true" android:textColor="#33b5e5"
         android:textStyle="bold" android:textSize="50sp" android:gravity="center|top"
         android:text="@string/title"
-        android:layout_marginTop="69dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/guessedNumber"
-        android:textSize="70sp"
-        android:layout_alignBottom="@+id/errorMessage"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
+    <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/errorMessage"
-        android:gravity="center_horizontal"
-        android:textSize="30sp"
-        android:textColor="#f6f6f6"
-        android:layout_marginBottom="52dp"
         android:layout_above="@+id/linearLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:padding="20dp" />
+        android:layout_marginBottom="26dp">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/guessedNumber"
+            android:textSize="70sp"
+            android:layout_alignBottom="@+id/errorMessage"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|bottom"
+            android:gravity="center_horizontal"
+            android:textColor="#f8f8f8f8" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/errorMessage"
+            android:gravity="center_horizontal"
+            android:textSize="30sp"
+            android:textColor="#f6f6f6"
+            android:paddingLeft="20sp"
+            android:paddingRight="20sp"
+            android:layout_gravity="center"
+            android:layout_above="@+id/linearLayout"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+    </FrameLayout>
 
     <LinearLayout
         android:orientation="vertical"
@@ -47,11 +59,12 @@
         android:layout_height="wrap_content"
         android:layout_alignWithParentIfMissing="false"
         android:id="@+id/linearLayout3"
-        android:layout_marginLeft="31dp"
-        android:layout_marginStart="31dp"
-        android:layout_alignTop="@+id/linearLayout2"
+        android:layout_below="@+id/fullscreen_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_gravity="right|top">
 
         <TextView
             android:layout_width="wrap_content"
@@ -86,12 +99,12 @@
         android:layout_height="wrap_content"
         android:layout_alignWithParentIfMissing="false"
         android:id="@+id/linearLayout2"
-        android:layout_above="@+id/guessedNumber"
+        android:layout_gravity="right|top"
+        android:layout_below="@+id/fullscreen_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="37dp">
+        android:layout_marginRight="18dp"
+        android:layout_marginEnd="18dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -106,25 +119,22 @@
 
         <EditText
             android:layout_width="125dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:inputType="number"
             android:ems="10"
             android:id="@+id/maxNumb"
-            android:layout_gravity="center"
             android:gravity="center"
             android:background="@color/black_overlay"
-            android:layout_alignTop="@+id/minNumb"
             android:textAlignment="center"
             android:textSize="70sp"
-            android:layout_alignLeft="@+id/textView4"
-            android:layout_alignStart="@+id/textView4"
             android:maxLength="3"
             android:layout_below="@+id/minNumb"
             android:layout_alignRight="@+id/textView4"
             android:layout_toLeftOf="@+id/minNumb"
             android:layout_toRightOf="@+id/minNumb"
             android:layout_alignParentEnd="false"
-            android:layout_alignParentStart="false" />
+            android:layout_alignParentStart="false"
+            android:layout_gravity="center" />
 
     </LinearLayout>
 
