--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,12 @@
 
     <TextView android:text="@string/app_name" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="#f9f9f9"
+        android:textStyle="bold"
+        android:textSize="20sp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -20,7 +25,8 @@
         android:id="@+id/button"
         android:nestedScrollingEnabled="false"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="30sp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -31,6 +37,20 @@
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
-        android:onClick="onQuit" />
+        android:onClick="onQuit"
+        android:textSize="30sp" />
+
+    <TextView
+        android:text="@string/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="59dp"
+        android:gravity="center_horizontal"
+        android:textStyle="italic"
+        android:textColor="#f9f9f9"
+        android:textSize="16sp" />
 
 </RelativeLayout>
